BJS2-47244, Job Analyzer - post-review edits